match history overflow fixed

--- a/frontend/src/User/User.css
+++ b/frontend/src/User/User.css
@@ -112,7 +112,6 @@
 }
 
 .Match-lost, .Match-won {
-	overflow-y: hidden;
 	overflow-x: scroll;
 }
 
@@ -128,4 +127,41 @@
 	width: 100%;
 	height: 70%;
 	overflow: scroll;
+}
+
+.Achievement-record {
+	width: 90%;
+	max-height:80%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 2px;
+}
+
+.Achievement-record>img {
+	max-height: 60%;
+	aspect-ratio: 1 / 1;
+	border-radius: 50%;
+	border: 2px solid black;
+}
+
+.Match-list {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	height: 70%;
+	justify-content: start;
+	overflow-y: scroll;
+}
+
+.Match-list table {
+	border-collapse: collapse;
+	width: 90%;
+}
+
+.Match-list tbody {
+	width: 100%;
+	justify-content: start;
+	align-items: flex-start;
 }
